# chess_mind_ai

./: .gitignore  LICENSE  README.md  conftest.py  plan.md  play  prompt_minds.md  pyproject.toml  uci
docs/: llm-providers.md  persona-design.md  playing-in-cutechess.md  scorer-sandbox-design.md
src/chess_mind_ai/: cli.py  context.py  elo.py  engine.py  readonly_board.py  selector.py  uci.py
src/chess_mind_ai/llm/: __init__.py  gemini.py  prompt.py  protocol.py
src/chess_mind_ai/persona/: __init__.py  chat.py  narration.py  prompt.py  spec.py
src/chess_mind_ai/sandbox/: __init__.py  loader.py  seccomp.py  validation.py  validator.py  worker.py
src/chess_mind_ai/scorers/: __init__.py  neutral.py  queen_obsessed.py
tests/: test_context.py  test_elo.py  test_gemini_adapter.py  test_integration_stockfish.py  test_loader.py  test_persona_chat.py  test_persona_narration.py  test_persona_spec.py  test_prompt.py  test_queen_obsessed.py  test_readonly_board.py  test_seccomp.py  test_selector.py  test_uci.py  test_validation.py  test_validator.py  test_worker.py
